# MY3D

./: .gitignore  .gitmodules  MY3D.sln  TISUN_SOLUTION.sln
AnimationGraphic/: Learning3DMath.sln  LearningMathAndGraphic.vcxproj  LearningMathAndGraphic.vcxproj.filters  WinMain.cpp  getThirdParty.ps1
Camera/: Camera.cpp  Ti3D.vcxproj  Ti3D.vcxproj.filters  test.ps1
Camera/math/: Vector3.cpp  Vector3.h  main.cpp  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h
DirectX12/: example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters
LatticGL/: CMakeLists.txt
Powersell/: powershellModule.psm1
PowershellModule/: powershellModule.psm1
RBF_lattice/: CMakeLists.txt  Thuy.cpp  rbfDeformer.cpp
TISUN/: TISUN.vcxproj
rbfQuaternion/: camtest.cpp  setup-build.ps1  start.ps1
ti3D/: .gitignore  CMakeLists.txt  HierachyDir.txt  UML.txt
ti3D/TiMath/: TiMathConfig.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  main.cpp  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h
ti3D/UI/: main.cpp
ti3D/app/: StateManager.cpp  StateManager.h  WindowData.h  main.cpp
ti3D/camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h
ti3D/doc/: Ti3D User Documentation.markdown  Ti3D_devInfo.markdown
ti3D/renderer/: DebugDrawable.h  DebugPoint.cpp  DebugPoint.h  Renderer.cpp  Renderer.h  TargetCamAim.cpp  TargetCamAim.h
tidev/: CMakeLists.txt  main.cpp  setup-build.ps1  start.ps1  tidev.vcxproj
tidev/src/: main.cpp
trader/: .gitignore  6_10_2025.py  gold_data.csv  installPackage.py  requirements.txt  trader.py
